Updated so 1000px css is used on tablets/small screens to try and fix menu and header issues on ipads

--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -7,3 +7,17 @@
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
+
+			#nav > ul > li > a,
+			#nav > ul > li > span
+			{
+				display: inline-block;
+				padding: 0.80em 1.5em;
+				letter-spacing: 0.06em;
+				text-decoration: none;
+				text-transform: uppercase;
+				font-size: 0.9em;
+				color: #369E33;
+				outline: 0;
+			}
+
