--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -32,6 +32,16 @@
 		min-height: 6em;
 	}
 
+		#logo span
+		{
+			position: absolute;
+			top: 1.2em;
+			font-size: 1.2em;
+			right: 0;
+			letter-spacing: 1px;
+			color: rgba(255,255,255,.7);
+		}
+
 /*********************************************************************************/
 /* Banner                                                                        */
 /*********************************************************************************/
