--- a/css/style.css
+++ b/css/style.css
@@ -724,8 +724,7 @@
 		#logo span
 		{
 			position: absolute;
-			top: 1.2em;
-			font-size: 1.2em;
+			top: 2.1em;
 			right: 0;
 			letter-spacing: 1px;
 			color: rgba(255,255,255,.7);
